feat(): cheat animate

--- a/apps/mix-database/src/app/app.component.scss
+++ b/apps/mix-database/src/app/app.component.scss
@@ -1,127 +1,25 @@
 .main-app {
   width: 100%;
   height: 100%;
-  background: var(--main-backdrop-color);
-  -webkit-backdrop-filter: blur(1.5rem);
-  backdrop-filter: blur(1.5rem);
+  // background: var(--main-backdrop-color);
+  background: #ffeeee; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #ddefbb,
+    #ffeeee
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #ddefbb,
+    #ffeeee
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  // -webkit-backdrop-filter: blur(1.5rem);
+  // backdrop-filter: blur(1.5rem);
 }
 
 .app-backdrop {
   width: 100%;
   height: 100%;
-  background-image: url(https://png.pngtree.com/png-clipart/20220429/original/pngtree-hexagon-abstract-shape-border-blue-tech-png-image_7587896.png) !important;
-  // background-image: radial-gradient(
-  //     50% 50% at 50% 50%,
-  //     rgba(160, 51, 255, 0.024) 0,
-  //     rgba(160, 51, 255, 0) 50%
-  //   ),
-  //   radial-gradient(
-  //     50% 50% at 50% 50%,
-  //     rgba(160, 51, 255, 0.04) 0,
-  //     rgba(160, 51, 255, 0) 75%
-  //   ),
-  //   radial-gradient(
-  //     50% 50% at 50% 50%,
-  //     rgba(160, 51, 255, 0.064) 0,
-  //     rgba(160, 51, 255, 0) 100%
-  //   ),
-  //   radial-gradient(
-  //     50% 50% at 50% 50%,
-  //     rgba(24, 119, 242, 0.024) 0,
-  //     rgba(24, 119, 242, 0) 50%
-  //   ),
-  //   radial-gradient(
-  //     50% 50% at 50% 50%,
-  //     rgba(24, 119, 242, 0.04) 0,
-  //     rgba(24, 119, 242, 0) 75%
-  //   ),
-  //   radial-gradient(
-  //     50% 50% at 50% 50%,
-  //     rgba(24, 119, 242, 0.064) 0,
-  //     rgba(24, 119, 242, 0) 100%
-  //   ),
-  //   radial-gradient(
-  //     50% 50% at 50% 50%,
-  //     rgba(255, 108, 92, 0.024) 0,
-  //     rgba(255, 108, 92, 0) 50%
-  //   ),
-  //   radial-gradient(
-  //     50% 50% at 50% 50%,
-  //     rgba(255, 108, 92, 0.04) 0,
-  //     rgba(255, 108, 92, 0) 75%
-  //   ),
-  //   radial-gradient(
-  //     50% 50% at 50% 50%,
-  //     rgba(255, 108, 92, 0.064) 0,
-  //     rgba(255, 108, 92, 0) 100%
-  //   ),
-  //   radial-gradient(
-  //     50% 50% at 50% 50%,
-  //     rgba(245, 206, 51, 0.024) 0,
-  //     rgba(245, 206, 51, 0) 50%
-  //   ),
-  //   radial-gradient(
-  //     50% 50% at 50% 50%,
-  //     rgba(245, 206, 51, 0.04) 0,
-  //     rgba(245, 206, 51, 0) 75%
-  //   ),
-  //   radial-gradient(
-  //     50% 50% at 50% 50%,
-  //     rgba(245, 206, 51, 0.064) 0,
-  //     rgba(245, 206, 51, 0) 100%
-  //   ),
-  //   radial-gradient(
-  //     50% 50% at 50% 50%,
-  //     rgba(37, 211, 102, 0.024) 0,
-  //     rgba(37, 211, 102, 0) 50%
-  //   ),
-  //   radial-gradient(
-  //     50% 50% at 50% 50%,
-  //     rgba(37, 211, 102, 0.04) 0,
-  //     rgba(37, 211, 102, 0) 75%
-  //   ),
-  //   radial-gradient(
-  //     50% 50% at 50% 50%,
-  //     rgba(37, 211, 102, 0.064) 0,
-  //     rgba(37, 211, 102, 0) 100%
-  //   ),
-  //   radial-gradient(
-  //     50% 50% at 50% 50%,
-  //     rgba(24, 119, 242, 0.024) 0,
-  //     rgba(24, 119, 242, 0) 50%
-  //   ),
-  //   radial-gradient(
-  //     50% 50% at 50% 50%,
-  //     rgba(24, 119, 242, 0.04) 0,
-  //     rgba(24, 119, 242, 0) 75%
-  //   ),
-  //   radial-gradient(
-  //     50% 50% at 50% 50%,
-  //     rgba(24, 119, 242, 0.064) 0,
-  //     rgba(24, 119, 242, 0) 100%
-  //   );
-  // background-size: 156.45vw 99.03vw, 156.45vw 99.03vw, 156.45vw 99.03vw,
-  //   226.86vw 145.44vw, 226.86vw 145.44vw, 226.86vw 145.44vw, 171.96vw 110.31vw,
-  //   171.96vw 110.31vw, 171.96vw 110.31vw, 130.29vw 83.58vw, 130.29vw 83.58vw,
-  //   130.29vw 83.58vw, 198vw 126.9vw, 198vw 126.9vw, 198vw 126.9vw, 300vw 192vw,
-  //   300vw 192vw, 300vw 192vw;
-  // background-attachment: fixed;
-  // background-position: 37.97vw calc(((300vw - 100vh) / 2 - 85.77vw) * -1),
-  //   37.97vw calc(((300vw - 100vh) / 2 - 85.77vw) * -1),
-  //   37.97vw calc(((300vw - 100vh) / 2 - 85.77vw) * -1),
-  //   -100vw calc(((300vw - 100vh) / 2 - 154.56vw) * -1),
-  //   -100vw calc(((300vw - 100vh) / 2 - 154.56vw) * -1),
-  //   -100vw calc(((300vw - 100vh) / 2 - 154.56vw) * -1),
-  //   13.34vw calc(((300vw - 100vh) / 2 - 53.88vw) * -1),
-  //   13.34vw calc(((300vw - 100vh) / 2 - 53.88vw) * -1),
-  //   13.34vw calc(((300vw - 100vh) / 2 - 53.88vw) * -1),
-  //   10.64vw calc(((300vw - 100vh) / 2 - 17.19vw) * -1),
-  //   10.64vw calc(((300vw - 100vh) / 2 - 17.19vw) * -1),
-  //   10.64vw calc(((300vw - 100vh) / 2 - 17.19vw) * -1),
-  //   -49vw calc(((300vw - 100vh) / 2 - 41.1vw) * -1),
-  //   -49vw calc(((300vw - 100vh) / 2 - 41.1vw) * -1),
-  //   -49vw calc(((300vw - 100vh) / 2 - 41.1vw) * -1),
-  //   -100vw calc(((300vw - 100vh) / 2 - 78vw) * -1),
-  //   -100vw calc(((300vw - 100vh) / 2 - 78vw) * -1),
-  //   -100vw calc(((300vw - 100vh) / 2 - 78vw) * -1);
+  // background-image: url(https://png.pngtree.com/png-clipart/20220429/original/pngtree-hexagon-abstract-shape-border-blue-tech-png-image_7587896.png) !important;
 }
