--- a/apps/mix-cms/src/app/app.component.scss
+++ b/apps/mix-cms/src/app/app.component.scss
@@ -1,13 +1,25 @@
 .main-app {
   width: 100%;
   height: 100%;
-  background: var(--main-backdrop-color);
-  -webkit-backdrop-filter: blur(1.5rem);
-  backdrop-filter: blur(1.5rem);
+  // background: var(--main-backdrop-color);
+  background: #ffeeee; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #ddefbb,
+    #ffeeee
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #ddefbb,
+    #ffeeee
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  // -webkit-backdrop-filter: blur(1.5rem);
+  // backdrop-filter: blur(1.5rem);
 }
 
 .app-backdrop {
   width: 100%;
   height: 100%;
-  background-image: url(https://png.pngtree.com/png-clipart/20220429/original/pngtree-hexagon-abstract-shape-border-blue-tech-png-image_7587896.png) !important;
+  // background-image: url(https://png.pngtree.com/png-clipart/20220429/original/pngtree-hexagon-abstract-shape-border-blue-tech-png-image_7587896.png) !important;
 }
