--- a/libs/mix-share/src/modules/database/components/database-select/database-select.component.scss
+++ b/libs/mix-share/src/modules/database/components/database-select/database-select.component.scss
@@ -1,11 +1,14 @@
 .database-select {
   width: 100%;
   height: 100%;
-  padding: 1rem;
   display: flex;
   flex-direction: column;
   box-shadow: -25px 5px 25px -40px #00000080 inset;
   border: 1px solid var(--border-color-default);
+
+  &__top {
+    padding: 1rem 1rem 0 1rem;
+  }
 
   &__add-btn {
     width: 100%;
@@ -25,6 +28,7 @@
   &__list {
     flex-grow: 1;
     overflow: auto;
+    padding: 0 1rem 1rem 1rem;
   }
 
   &__item {
