--- a/libs/mix-share/src/components/entity-form/entity-form.component.html
+++ b/libs/mix-share/src/components/entity-form/entity-form.component.html
@@ -1,56 +1,53 @@
-<div class="entity-form"
+<div class="card-01-wrap"
      [class.--new]="entity.new"
-     [formGroup]="form">
-  <div class="row">
-    <div class="col-4 d-flex align-items-center gap-2">
-      <div>
-        <ng-content></ng-content>
-      </div>
-
-      <mix-input [size]="'s'"
-                 placeHolder="Display name"
-                 formControlName="displayName"></mix-input>
-    </div>
-
-    <div class="col-4">
-      <div class="d-flex gap-1">
-        <mix-button type="outline"
-                    [iconBtn]="true"
-                    (click)="updateSystemName(true)"
-                    size="m"><span class="mix-icon">refresh</span></mix-button>
-        <mix-input [closable]="false"
-                   [size]="'s'"
-                   placeHolder="Unique system name"
-                   formControlName="systemName"></mix-input>
-      </div>
-    </div>
-
-    <div class="col-2">
-      <mix-button class="w-100 data-type-select"
-                  type="outline"
-                  (click)="showDataTypeDialog($event, dataTypePicker)"
-                  size="m">
-        <div *ngIf="form.controls.dataType.value">
-          {{
-            $any(dataTypeDisplay)[form.controls.dataType.value]?.name ??
-              form.controls.dataType.value
-          }}
+     [style.--color]="getColor(form.value)">
+  <div class="card-01"
+       [formGroup]="form">
+    <div class="row">
+      <div class="col-4 d-flex align-items-center gap-2">
+        <div>
+          <ng-content></ng-content>
         </div>
 
-        <span class="mix-icon">chevron_right</span>
-      </mix-button>
+        <mix-input placeHolder="Display name"
+                   formControlName="displayName"></mix-input>
+      </div>
+
+      <div class="col-4">
+        <div class="d-flex gap-1">
+          <mix-button type="outline"
+                      [iconBtn]="true"
+                      (click)="updateSystemName(true)"
+                      size="m"><span class="mix-icon">refresh</span></mix-button>
+          <mix-input [closable]="false"
+                     placeHolder="Unique system name"
+                     formControlName="systemName"></mix-input>
+        </div>
+      </div>
+
+      <div class="col-2">
+        <mix-button type="outline"
+                    (click)="showDataTypeDialog($event, dataTypePicker)"
+                    size="m">
+          <div *ngIf="getDisplay(form.value) as title">
+            {{ title }}
+          </div>
+
+          <span class="ms-1 mix-icon">edit</span>
+        </mix-button>
+      </div>
     </div>
-  </div>
 
-  <div class="entity-form__action">
-    <mix-button [iconBtn]="true"
-                (click)="showDialog(template)"
-                size="s"><span class="material-symbols-outlined"> settings </span></mix-button>
+    <div class="card-01__action">
+      <mix-button [iconBtn]="true"
+                  (click)="showDialog(template)"
+                  size="s"><span class="material-symbols-outlined"> settings </span></mix-button>
 
-    <mix-button type="danger"
-                [iconBtn]="true"
-                (click)="deleteEntity.emit(entity)"
-                size="s"><span class="material-symbols-outlined"> delete </span></mix-button>
+      <mix-button type="danger"
+                  [iconBtn]="true"
+                  (click)="deleteEntity.emit(entity)"
+                  size="s"><span class="material-symbols-outlined"> delete </span></mix-button>
+    </div>
   </div>
 </div>
 
