--- a/libs/mix-share/src/modules/database/databases/database.component.html
+++ b/libs/mix-share/src/modules/database/databases/database.component.html
@@ -32,7 +32,7 @@
              mixTableColumn>
           <ng-template let-data
                        mixColumnCell>
-            <div class="flex w-fit"
+            <div class="flex w-fit items-center"
                  (click)="goDetail(data.id)">
               <div class="text-600 me-2">
                 {{ data.displayName }}
