feat(): update performance table

--- a/apps/mix-cms/src/app/app.component.scss
+++ b/apps/mix-cms/src/app/app.component.scss
@@ -1,25 +1,12 @@
 .main-app {
   width: 100%;
   height: 100%;
-  // background: var(--main-backdrop-color);
-  background: #ffeeee; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #ddefbb,
-    #ffeeee
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to right,
-    #ddefbb,
-    #ffeeee
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-  // -webkit-backdrop-filter: blur(1.5rem);
-  // backdrop-filter: blur(1.5rem);
+  background: #ece9e6;
+  background: -webkit-linear-gradient(to left, #ffffff, #ece9e6);
+  background: linear-gradient(to left, #ffffff, #ece9e6);
 }
 
 .app-backdrop {
   width: 100%;
   height: 100%;
-  // background-image: url(https://png.pngtree.com/png-clipart/20220429/original/pngtree-hexagon-abstract-shape-border-blue-tech-png-image_7587896.png) !important;
 }
