--- a/apps/mix-kanban/src/app/app.component.scss
+++ b/apps/mix-kanban/src/app/app.component.scss
@@ -1,13 +1,12 @@
 .main-app {
   width: 100%;
   height: 100%;
-  background: var(--main-backdrop-color);
-  -webkit-backdrop-filter: blur(1.5rem);
-  backdrop-filter: blur(1.5rem);
+  background: #ece9e6;
+  background: -webkit-linear-gradient(to left, #ffffff, #ece9e6);
+  background: linear-gradient(to left, #ffffff, #ece9e6);
 }
 
 .app-backdrop {
   width: 100%;
   height: 100%;
-  background-image: url(https://png.pngtree.com/png-clipart/20220429/original/pngtree-hexagon-abstract-shape-border-blue-tech-png-image_7587896.png) !important;
 }
