--- a/libs/mix-share/src/modules/auth/login/login.component.html
+++ b/libs/mix-share/src/modules/auth/login/login.component.html
@@ -4,7 +4,7 @@
     <img src="assets/images/mixcore-logo.svg">
   </div>
 
-  <form class="login__container"
+  <form class="login__container shadow-md"
         id="login"
         name="login"
         [formGroup]="loginForm"
@@ -31,8 +31,14 @@
 
     <mix-form-error formControlName="password"></mix-form-error>
 
-    <mix-error-alert class="mt-3 mb-4"
+    <mix-error-alert class="mt-2 mb-2"
                      [error]="error"></mix-error-alert>
+
+    <div class="d-flex justify-between mb-5">
+      <mix-checkbox id="rememberMe"
+                    [label]="'Remember me'"
+                    formControlName="rememberMe"></mix-checkbox>
+    </div>
 
     <mix-button class="mt-4 w-full"
                 [loading]="state === 'Loading'"
