--- a/libs/mix-share/src/components/main-toolbar/user-navigation/user-navigation.component.html
+++ b/libs/mix-share/src/components/main-toolbar/user-navigation/user-navigation.component.html
@@ -1,4 +1,4 @@
-<div class="user-navigation hoverable"
+<div class="user-navigation hoverable vm"
      [tp]="userMenuTpl"
      [tpOffset]="[0, -5]"
      tpClassName="user-navigation-popup"
