--- a/libs/mix-share/src/modules/database/database-data/database-data.component.html
+++ b/libs/mix-share/src/modules/database/database-data/database-data.component.html
@@ -5,7 +5,7 @@
                           (rowHeightChange)="rowHeightChange($event)"></mix-vertical-toolbar>
   </div>
 
-  <div class="data-table-page__main-container">
+  <div class="data-table-page__main-container drop-shadow-lg">
     <ng-container *ngIf="vm.status === 'Pending'">
       <div class="h-full w-full flex flex-col justify-center items-center">
         <img src="assets/images/empty-box.png"
