--- a/libs/mix-share/src/modules/database/database-detail/database-detail.component.scss
+++ b/libs/mix-share/src/modules/database/database-detail/database-detail.component.scss
@@ -12,6 +12,6 @@
     overflow: auto;
     margin-right: -4px;
     margin-top: 4px;
-    border: 1px solid var(--tui-base-04);
+    // border: 1px solid var(--tui-base-04);
   }
 }
