--- a/libs/share-styles/src/styles/shares/page-detail.scss
+++ b/libs/share-styles/src/styles/shares/page-detail.scss
@@ -102,8 +102,8 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    box-shadow: 0px 4px 22px 0px #00000033;
-    border: 1px solid var(--tui-base-04);
+    // box-shadow: 0px 4px 22px 0px #00000033;
+    // border: 1px solid var(--tui-base-04);
     border-top-left-radius: 12px;
     border-bottom-left-radius: 12px;
     overflow: hidden;
