--- a/libs/share-styles/src/styles/shares/page-list.scss
+++ b/libs/share-styles/src/styles/shares/page-list.scss
@@ -82,7 +82,7 @@
     background-color: var(--background-color-primary);
     border-top-left-radius: 12px;
     border-bottom-left-radius: 12px;
-    border: 1px solid var(--tui-base-04);
+    // border: 1px solid var(--tui-base-04);
     overflow: hidden;
     flex-grow: 1;
     z-index: 1;
