feat(): update checkbox

--- a/libs/mix-ui/src/checkbox/checkbox.component.html
+++ b/libs/mix-ui/src/checkbox/checkbox.component.html
@@ -1,5 +1,5 @@
 <div class="flex items-center">
-  <input class="w-4 outline-none h-4 text-primary bg-gray-100 border-gray-300 rounded focus:ring-primary dark:focus:ring-primary dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
+  <input class="form-checkbox is-basic h-5 w-5 rounded border-slate-400/70 bg-slate-100 checked:border-primary checked:bg-primary hover:border-primary focus:border-primary dark:border-navy-500 dark:bg-navy-900 dark:checked:border-accent dark:checked:bg-accent dark:hover:border-accent dark:focus:border-accent"
          type="checkbox"
          [formControl]="control"
          [id]="id"
