--- a/libs/mix-ui/src/checkbox/checkbox.component.html
+++ b/libs/mix-ui/src/checkbox/checkbox.component.html
@@ -1,10 +1,8 @@
-<div class="flex items-center">
+<label class="flex items-center">
   <input class="form-checkbox is-basic h-5 w-5 rounded border-slate-400/70 bg-slate-100 checked:border-primary checked:bg-primary hover:border-primary focus:border-primary dark:border-navy-500 dark:bg-navy-900 dark:checked:border-accent dark:checked:bg-accent dark:hover:border-accent dark:focus:border-accent"
          type="checkbox"
          [formControl]="control"
-         [id]="id"
-         value>
-  <label *ngIf="label"
-         class="ms-2 text-gray-900 dark:text-gray-300"
-         [for]="id">{{ label }}</label>
-</div>
+         [id]="id">
+  <span *ngIf="label"
+        class="block ml-2 text-gray-900 dark:text-gray-300">{{ label }}</span>
+</label>
